mock-data/large-cluster/k8s/admissionregistration.k8s.io:MutatingWebhookConfiguration/gitlab-cert-manager-webhook.yaml
kind: MutatingWebhookConfiguration
apiVersion: admissionregistration.k8s.io/v1
metadata:
    name: gitlab-cert-manager-webhook
    selfLink: >-
        /apis/admissionregistration.k8s.io/v1/mutatingwebhookconfigurations/gitlab-cert-manager-webhook
    uid: 9a24cefe-398b-11ea-b115-42010a8001d6
    resourceVersion: '61445330'
    generation: 2
    creationTimestamp: '2020-01-18T00:43:53Z'
    labels:
        app: webhook
        app.kubernetes.io/instance: gitlab
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: webhook
        helm.sh/chart: certmanager-v0.10.1
    annotations:
        certmanager.k8s.io/inject-apiserver-ca: 'true'
webhooks:
    -
        name: webhook.certmanager.k8s.io
        clientConfig:
            service:
                namespace: default
                name: kubernetes
                path: /apis/webhook.certmanager.k8s.io/v1beta1/mutations
                port: 443
            caBundle: >-
                LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURERENDQWZTZ0F3SUJBZ0lSQU9mZXR4Uzc5VWlnUkNwdVR2Rm4xL2N3RFFZSktvWklodmNOQVFFTEJRQXcKTHpFdE1Dc0dBMVVFQXhNa1ptWTVZbVkyTURVdE1EbGtOaTAwWmpCbUxXRXlabVl0WkRnek1XUTFNRFl3WVdFegpNQjRYRFRJd01ERXhNVEEwTlRneE9Wb1hEVEkxTURFd09UQTFOVGd4T1Zvd0x6RXRNQ3NHQTFVRUF4TWtabVk1ClltWTJNRFV0TURsa05pMDBaakJtTFdFeVptWXRaRGd6TVdRMU1EWXdZV0V6TUlJQklqQU5CZ2txaGtpRzl3MEIKQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBM2RsZ2FzditRWHczRWxTZVFGa3phSlF0RzhidGRSVzRnT2J5RU94cQpqOGsvVlp1Uk9T [...]
        rules:
            -
                operations:
                    - CREATE
                    - UPDATE
                apiGroups:
                    - certmanager.k8s.io
                apiVersions:
                    - v1alpha1
                resources:
                    - certificates
                    - issuers
                    - clusterissuers
                    - orders
                    - challenges
                    - certificaterequests
                scope: '*'
        failurePolicy: Fail
        matchPolicy: Exact
        namespaceSelector: {}
        objectSelector: {}
        sideEffects: Unknown
        timeoutSeconds: 30
        admissionReviewVersions:
            - v1beta1
        reinvocationPolicy: Never
