mock-data/large-cluster/k8s/admissionregistration.k8s.io:MutatingWebhookConfiguration/pod-ready.config.common-webhooks.networking.gke.io.yaml
kind: MutatingWebhookConfiguration
apiVersion: admissionregistration.k8s.io/v1
metadata:
    name: pod-ready.config.common-webhooks.networking.gke.io
    selfLink: >-
        /apis/admissionregistration.k8s.io/v1/mutatingwebhookconfigurations/pod-ready.config.common-webhooks.networking.gke.io
    uid: b39162b3-3437-11ea-9cdc-42010a8001cf
    resourceVersion: '273579601'
    generation: 3
    creationTimestamp: '2020-01-11T06:00:42Z'
    labels:
        networking.gke.io/common-webhooks: 'true'
    annotations:
        common-webhooks.networking.gke.io/webhook-name: pod-ready
webhooks:
    -
        name: pod-ready.common-webhooks.networking.gke.io
        clientConfig:
            url: 'https://localhost:5443/webhook/pod-ready'
            caBundle: >-
                LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURERENDQWZTZ0F3SUJBZ0lSQU9mZXR4Uzc5VWlnUkNwdVR2Rm4xL2N3RFFZSktvWklodmNOQVFFTEJRQXcKTHpFdE1Dc0dBMVVFQXhNa1ptWTVZbVkyTURVdE1EbGtOaTAwWmpCbUxXRXlabVl0WkRnek1XUTFNRFl3WVdFegpNQjRYRFRJd01ERXhNVEEwTlRneE9Wb1hEVEkxTURFd09UQTFOVGd4T1Zvd0x6RXRNQ3NHQTFVRUF4TWtabVk1ClltWTJNRFV0TURsa05pMDBaakJtTFdFeVptWXRaRGd6TVdRMU1EWXdZV0V6TUlJQklqQU5CZ2txaGtpRzl3MEIKQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBM2RsZ2FzditRWHczRWxTZVFGa3phSlF0RzhidGRSVzRnT2J5RU94cQpqOGsvVlp1Uk9T [...]
        rules:
            -
                operations:
                    - CREATE
                apiGroups:
                    - ''
                apiVersions:
                    - v1
                resources:
                    - pods
                scope: '*'
        failurePolicy: Ignore
        matchPolicy: Equivalent
        namespaceSelector: {}
        objectSelector: {}
        sideEffects: None
        timeoutSeconds: 10
        admissionReviewVersions:
            - v1beta1
        reinvocationPolicy: Never
